--- a/MOS Burgers Front End/customerManage.html
+++ b/MOS Burgers Front End/customerManage.html
@@ -35,8 +35,9 @@
         
 
 <button type="button" class="btn btn-outline-primary" id="load-customer">Load Customer</button>
+<div style="display: flex; justify-content: center;">
 <table class="table table-dark table-striped mt-5" id="customer-table" border="1" style="width: 750px;">
-</table> 
+</table> </div>
 </div></div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="app.js"></script>
