--- a/MOS Burgers Front End/itemManage.html
+++ b/MOS Burgers Front End/itemManage.html
@@ -17,8 +17,10 @@
         <div class="justify-content-sm-center">
         <input type="text" class="form-control p-2 m-4 " id="code" placeholder="Item Code">
         <input type="text" class="form-control p-2 m-4 " id="name" placeholder="Name">
+        <input type="text" class="form-control p-2 m-4 " id="category" placeholder="Category">
         <input type="text" class="form-control p-2 m-4 " id="price" placeholder="Unit Price">
         <input type="text" class="form-control p-2 m-4" id="discount" placeholder="Discount">
+        <input type="file" class="form-control p-2 m-4" id="image" placeholder="Image">
         <button type="button" class="btn btn-success"  onclick="addItem()">Add Item</button>
     </div>
     </div>
@@ -26,11 +28,13 @@
     </div>
     <div class="px-4 py-5 my-5 text-center bg-warning-subtle">
         <h3 class="display-5 fw-bold text-body-emphasis">Display Item</h3>
-<button type="button" class="btn btn-outline-primary" id="load-item">Load Table</button>
+        <button type="button" class="btn btn-outline-primary" id="load-item">Load Table</button>
+
+        <div style="display: flex; justify-content: center;">
 <table class="table table-dark table-striped mt-5" id="item-table" border="1" style="width: 750px;">
   
 </table>
-
+</div>
 </div></div>
 </div>
 </div>
