order display done

--- a/MOS Burgers Front End/index.html
+++ b/MOS Burgers Front End/index.html
@@ -33,23 +33,14 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Products</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Burgers</a></li>
-              <li><a class="dropdown-item" href="#">SubMaine</a></li>
-              <li><a class="dropdown-item" href="#">Fries</a></li>
-              <li><a class="dropdown-item" href="#">Pasta</a></li>
-              <li><a class="dropdown-item" href="#">Chicken</a></li>
-              <li><a class="dropdown-item" href="#">Beverages</a></li>
-       
-            </ul>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="orderManage.html">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Orders</a>
+            <a class="nav-link active" aria-current="page" href="orderHistory.html">Orders</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Customers</a>
+            <a class="nav-link active" aria-current="" href="customerManage.html">Customers</a>
           </li> <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">About Us</a>
           </li>
