--- a/MOS Burgers Front End/itemManage.html
+++ b/MOS Burgers Front End/itemManage.html
@@ -20,10 +20,30 @@
         <input type="text" class="form-control p-2 m-4 " id="category" placeholder="Category">
         <input type="text" class="form-control p-2 m-4 " id="price" placeholder="Unit Price">
         <input type="text" class="form-control p-2 m-4" id="discount" placeholder="Discount">
+        <input type="text" class="form-control p-2 m-4" id="qty" placeholder="Quantity">
         <input type="file" class="form-control p-2 m-4" id="image" placeholder="Image">
         <button type="button" class="btn btn-success"  onclick="addItem()">Add Item</button>
+         </div>
+     </div>
     </div>
-    </div>
+</div>
+<div class="px-4 py-5 my-5 text-center bg-light">
+     <div class="col-lg-6 mx-auto">
+        <h3>Update Items</h3>
+        <div class="justify-content-sm-center">
+        <input type="text" class="form-control p-2 m-4 " id="searchCode" placeholder="Item Code">
+        <button type="button" class="btn btn-warning"  onclick="searchItem()">Search Item</button>
+        <button type="button" class="btn btn-danger"  onclick="deleteItem()">Delete Item</button>
+        <input type="text" class="form-control p-2 m-4 " id="updateName" placeholder="Name">
+        <input type="text" class="form-control p-2 m-4 " id="updateCategory" placeholder="Category">
+        <input type="text" class="form-control p-2 m-4 " id="updatePrice" placeholder="Unit Price">
+        <input type="text" class="form-control p-2 m-4" id="updateDiscount" placeholder="Discount">
+        <input type="text" class="form-control p-2 m-4" id="updateQTY" placeholder="Quantity">
+        <button type="button" class="btn btn-success"  onclick="updateItem()">Update Item</button>
+         </div>
+     </div>
+
+</div>
     </div>
     </div>
     <div class="px-4 py-5 my-5 text-center bg-warning-subtle">
