--- a/MOS Burgers Front End/orderHistory.html
+++ b/MOS Burgers Front End/orderHistory.html
@@ -18,7 +18,7 @@
         <h1 class="display-5 fw-bold text-light">Display Orders</h1>
         <div class="col-lg-6 mx-auto">
 
-    <button type="button" class="btn btn-outline-primary" id="load-order">Load Customer</button>
+    <button type="button" class="btn btn-outline-primary" id="load-order">Load Orders</button>
 
          <div style="display: flex; justify-content: center;">
         <table class="table table-dark table-striped mt-5" id="order-table" border="1" style="width: 750px;">
